--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -25,6 +25,7 @@
 #cmakedefine _IRR_COMPILE_WITH_STL_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_PLY_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_BAW_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_GLTF_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_JPG_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_PNG_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_TGA_LOADER_
@@ -35,6 +36,7 @@
 #cmakedefine _IRR_COMPILE_WITH_STL_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_PLY_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_BAW_WRITER_
+#cmakedefine _IRR_COMPILE_WITH_GLTF_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_TGA_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_JPG_WRITER_
 #cmakedefine _IRR_COMPILE_WITH_PNG_WRITER_
