--- a/examples_tests/CMakeLists.txt
+++ b/examples_tests/CMakeLists.txt
@@ -71,4 +71,6 @@ add_subdirectory(44.LevelCurveExtraction EXCLUDE_FROM_ALL)
 add_subdirectory(45.BRDFEvalTest EXCLUDE_FROM_ALL)
 add_subdirectory(46.SamplingValidation EXCLUDE_FROM_ALL)
 add_subdirectory(47.DerivMapTest EXCLUDE_FROM_ALL)
+if(NBL_BUILD_GLTF_TEST)
 add_subdirectory(48.glTF EXCLUDE_FROM_ALL)
+endif()
