--- a/include/irr/config/BuildConfigOptions.h.in
+++ b/include/irr/config/BuildConfigOptions.h.in
@@ -31,6 +31,7 @@
 #cmakedefine _IRR_COMPILE_WITH_TGA_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_OPENEXR_LOADER_
 #cmakedefine _IRR_COMPILE_WITH_GLI_LOADER_
+#cmakedefine _IRR_COMPILE_WITH_BIN_LOADER_
 
 // writers
 #cmakedefine _IRR_COMPILE_WITH_STL_WRITER_
