Updated macros generated by cmake

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -168,8 +168,8 @@ set(BUILD_STATIC_LIBS ${_OLD_BUILD_STATIC_LIBS})
 set(BUILD_TESTING ${_OLD_BUILD_TESTING})
 
 #gli
-option(_IRR_COMPILE_WITH_GLI_ "Build with GLI library" ON)
-if(_IRR_COMPILE_WITH_GLI_)
+option(_NBL_COMPILE_WITH_GLI_ "Build with GLI library" ON)
+if(_NBL_COMPILE_WITH_GLI_)
 	set(_OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
 	set(_OLD_BUILD_STATIC_LIBS ${BUILD_STATIC_LIBS})
 	set(_OLD_BUILD_TESTING ${BUILD_TESTING})
