--- a/src/irr/CMakeLists.txt
+++ b/src/irr/CMakeLists.txt
@@ -40,25 +40,25 @@ include(common)
 
 #[[ Loaders and writers compile options available to edit by user
 	All revelant _IRR_COMPILE_WITH will be there]]
-option(_IRR_COMPILE_WITH_MTL_LOADER_ "Compile with MTL Loader" ON)
-option(_IRR_COMPILE_WITH_OBJ_LOADER_ "Compile with OBJ Loader" ON)
-#option(_IRR_COMPILE_WITH_OBJ_WRITER_ "Compile with OBJ Writer" ON) uncomment when writer exists
-option(_IRR_COMPILE_WITH_STL_LOADER_ "Compile with STL Loader" ON)
-option(_IRR_COMPILE_WITH_STL_WRITER_ "Compile with STL Writer" ON)
-option(_IRR_COMPILE_WITH_PLY_LOADER_ "Compile with PLY Loader" ON)
-option(_IRR_COMPILE_WITH_PLY_WRITER_ "Compile with PLY Writer" ON)
-option(_IRR_COMPILE_WITH_BAW_LOADER_ "Compile with BAW Loader" ON)
-option(_IRR_COMPILE_WITH_BAW_WRITER_ "Compile with BAW Writer" ON)
-option(_IRR_COMPILE_WITH_JPG_LOADER_ "Compile with JPG Loader" ON)
-option(_IRR_COMPILE_WITH_JPG_WRITER_ "Compile with JPG Writer" ON)
-option(_IRR_COMPILE_WITH_PNG_LOADER_ "Compile with PNG Loader" ON)
-option(_IRR_COMPILE_WITH_PNG_WRITER_ "Compile with PNG Writer" ON)
-option(_IRR_COMPILE_WITH_TGA_LOADER_ "Compile with TGA Loader" ON)
-option(_IRR_COMPILE_WITH_TGA_WRITER_ "Compile with TGA Writer" ON)
-option(_IRR_COMPILE_WITH_OPENEXR_LOADER_ "Compile with OpenEXR Loader" ON)
-option(_IRR_COMPILE_WITH_OPENEXR_WRITER_ "Compile with OpenEXR Writer" ON)
-option(_IRR_COMPILE_WITH_GLI_LOADER_ "Compile with GLI Loader" ON)
-option(_IRR_COMPILE_WITH_GLI_WRITER_ "Compile with GLI Writer" ON)
+option(_NBL_COMPILE_WITH_MTL_LOADER_ "Compile with MTL Loader" ON)
+option(_NBL_COMPILE_WITH_OBJ_LOADER_ "Compile with OBJ Loader" ON)
+#option(_NBL_COMPILE_WITH_OBJ_WRITER_ "Compile with OBJ Writer" ON) uncomment when writer exists
+option(_NBL_COMPILE_WITH_STL_LOADER_ "Compile with STL Loader" ON)
+option(_NBL_COMPILE_WITH_STL_WRITER_ "Compile with STL Writer" ON)
+option(_NBL_COMPILE_WITH_PLY_LOADER_ "Compile with PLY Loader" ON)
+option(_NBL_COMPILE_WITH_PLY_WRITER_ "Compile with PLY Writer" ON)
+option(_NBL_COMPILE_WITH_BAW_LOADER_ "Compile with BAW Loader" ON)
+option(_NBL_COMPILE_WITH_BAW_WRITER_ "Compile with BAW Writer" ON)
+option(_NBL_COMPILE_WITH_JPG_LOADER_ "Compile with JPG Loader" ON)
+option(_NBL_COMPILE_WITH_JPG_WRITER_ "Compile with JPG Writer" ON)
+option(_NBL_COMPILE_WITH_PNG_LOADER_ "Compile with PNG Loader" ON)
+option(_NBL_COMPILE_WITH_PNG_WRITER_ "Compile with PNG Writer" ON)
+option(_NBL_COMPILE_WITH_TGA_LOADER_ "Compile with TGA Loader" ON)
+option(_NBL_COMPILE_WITH_TGA_WRITER_ "Compile with TGA Writer" ON)
+option(_NBL_COMPILE_WITH_OPENEXR_LOADER_ "Compile with OpenEXR Loader" ON)
+option(_NBL_COMPILE_WITH_OPENEXR_WRITER_ "Compile with OpenEXR Writer" ON)
+option(_NBL_COMPILE_WITH_GLI_LOADER_ "Compile with GLI Loader" ON)
+option(_NBL_COMPILE_WITH_GLI_WRITER_ "Compile with GLI Writer" ON)
 
 irr_get_conf_dir(IRRLICHT_CONF_DIR_DEBUG Debug)
 irr_get_conf_dir(IRRLICHT_CONF_DIR_RELEASE Release)
@@ -68,24 +68,24 @@ if(IRR_EMBED_BUILTIN_RESOURCES)
 endif()
 irr_get_conf_dir(IRRLICHT_CONF_DIR_RELWITHDEBINFO RelWithDebInfo)
 
-set(_IRR_COMPILE_WITH_OPENGL_ ${IRR_COMPILE_WITH_OPENGL})
+set(_NBL_COMPILE_WITH_OPENGL_ ${IRR_COMPILE_WITH_OPENGL})
 if (IRR_COMPILE_WITH_OPENCL)
 	message(STATUS "Building with OpenCL interop")
 		
-	set(_IRR_COMPILE_WITH_OPENCL_ ${IRR_COMPILE_WITH_OPENCL})
+	set(_NBL_COMPILE_WITH_OPENCL_ ${IRR_COMPILE_WITH_OPENCL})
 endif()
 if (IRR_COMPILE_WITH_CUDA)
 	message(STATUS "Building with CUDA interop")
-	set(_IRR_COMPILE_WITH_CUDA_ ${IRR_COMPILE_WITH_CUDA})
+	set(_NBL_COMPILE_WITH_CUDA_ ${IRR_COMPILE_WITH_CUDA})
 	if (IRR_BUILD_OPTIX)
-		set(_IRR_BUILD_OPTIX_ ${IRR_BUILD_OPTIX})
+		set(_NBL_BUILD_OPTIX_ ${IRR_BUILD_OPTIX})
 	endif()
 endif()
 
-set(_IRR_EMBED_BUILTIN_RESOURCES_ ${IRR_EMBED_BUILTIN_RESOURCES})
+set(_NBL_EMBED_BUILTIN_RESOURCES_ ${IRR_EMBED_BUILTIN_RESOURCES})
 
 #set(_IRR_TARGET_ARCH_ARM_ ${IRR_TARGET_ARCH_ARM}) #uncomment in the future
-set(__IRR_FAST_MATH ${IRR_FAST_MATH})
+set(__NBL_FAST_MATH ${IRR_FAST_MATH})
 set(_NBL_DEBUG 0)
 configure_file("${IRR_ROOT_PATH}/include/irr/config/BuildConfigOptions.h.in" "${IRRLICHT_CONF_DIR_RELEASE}/BuildConfigOptions.h")
 configure_file("${IRR_ROOT_PATH}/include/irr/config/BuildConfigOptions.h.in" "${IRRLICHT_CONF_DIR_RELWITHDEBINFO}/BuildConfigOptions.h")
@@ -380,7 +380,7 @@ irr_target_link_shaderc(Irrlicht)
 irr_target_link_libjpeg(Irrlicht)
 irr_target_link_libpng(Irrlicht)
 irr_target_link_openexr(Irrlicht)
-if(_IRR_COMPILE_WITH_GLI_)
+if(_NBL_COMPILE_WITH_GLI_)
 	irr_target_link_gli(Irrlicht)
 endif()
 irr_target_include_parallel_hashmap(Irrlicht)
