--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,8 @@
 	url = https://github.com/lz4/lz4.git
 [submodule "3rdparty/spirv_cross"]
 	path = 3rdparty/spirv_cross
-	url = https://github.com/KhronosGroup/SPIRV-Cross.git
+	url = https://github.com/devshgraphicsprogramming/SPIRV-Cross.git
+	branch = issues1350-2
 [submodule "3rdparty/zlib"]
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib.git
