--- a/src/irr/ext/CEGUI/CMakeLists.txt
+++ b/src/irr/ext/CEGUI/CMakeLists.txt
@@ -1,6 +1,6 @@
-include(../../../../cmake/common.cmake)
+include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
 update_git_submodule(./stb)
-set(IRR_EXT_INTERNAL_INCLUDE_DIR "../../../../include/irr/ext/CEGUI")
+set(IRR_EXT_INTERNAL_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/irr/ext/CEGUI")
 
 
 set(IRR_EXT_CEGUI_H
