--- a/src/irr/ext/MitsubaLoader/CMakeLists.txt
+++ b/src/irr/ext/MitsubaLoader/CMakeLists.txt
@@ -1,6 +1,6 @@
-include(${CMAKE_SOURCE_DIR}/cmake/common.cmake)
+include(${IRR_ROOT_PATH}/cmake/common.cmake)
 
-set(IRR_EXT_INTERNAL_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include/irr/ext/MitsubaLoader")
+set(IRR_EXT_INTERNAL_INCLUDE_DIR "${IRR_ROOT_PATH}/include/irr/ext/MitsubaLoader")
 
 
 set(IRR_EXT_MITSUBA_LOADER_H
