--- a/src/irr/CMakeLists.txt
+++ b/src/irr/CMakeLists.txt
@@ -39,7 +39,7 @@ endif()
 include(common)
 
 #[[ Loaders and writers compile options available to edit by user
-	All revelant _IRR_COMPILE_WITH will be there]]
+	All revelant _NBL_COMPILE_WITH will be there]]
 option(_NBL_COMPILE_WITH_MTL_LOADER_ "Compile with MTL Loader" ON)
 option(_NBL_COMPILE_WITH_OBJ_LOADER_ "Compile with OBJ Loader" ON)
 #option(_NBL_COMPILE_WITH_OBJ_WRITER_ "Compile with OBJ Writer" ON) uncomment when writer exists
