--- a/ext/Bullet/CMakeLists.txt
+++ b/ext/Bullet/CMakeLists.txt
@@ -9,7 +9,7 @@ file(GLOB_RECURSE LINEARMATH_H ${BULLET_INCLUDE_PATH}/LinearMath/*.h)
 
 
 
-set(IRR_EXT_BULLET_H
+set(NBL_EXT_BULLET_H
   ${BULLETCOLLISION_H}
   ${BULLETDYNAMICS_H}
   ${LINEARMATH_H}
@@ -20,7 +20,7 @@ set(IRR_EXT_BULLET_H
   IMotionStateBase.h
 )
 
-set(IRR_EXT_BULLET_SRC
+set(NBL_EXT_BULLET_SRC
   ${BULLETCOLLISION_CPP}
   ${BULLETDYNAMICS_CPP}
   ${LINEARMATH_CPP}
@@ -30,15 +30,15 @@ set(IRR_EXT_BULLET_SRC
   CPhysicsWorld.cpp
 )
 
-set(IRR_EXT_BULLET_EXTERNAL_INCLUDE
+set(NBL_EXT_BULLET_EXTERNAL_INCLUDE
   "${BULLET_INCLUDE_PATH}"
 )
 
 irr_create_ext_library_project(
   BULLET
-  "${IRR_EXT_BULLET_H}"
-  "${IRR_EXT_BULLET_SRC}"
-  "${IRR_EXT_BULLET_EXTERNAL_INCLUDE}"
+  "${NBL_EXT_BULLET_H}"
+  "${NBL_EXT_BULLET_SRC}"
+  "${NBL_EXT_BULLET_EXTERNAL_INCLUDE}"
   ""
 )
 
