--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -2,66 +2,66 @@
 # This file is part of the "Nabla Engine".
 # For conditions of distribution and use, see copyright notice in nabla.h
 
-if (IRR_BUILD_CEGUI)
+if (NBL_BUILD_CEGUI)
     set(_OLD_CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH})
     set(CMAKE_PREFIX_PATH ${CEGUI_DEPS_INSTALL_PATH})
     #message(FATAL_ERROR "${CEGUI_DEPS_INSTALL_PATH}") # CEGUI_DEPS_INSTALL_PATH is empty forward it around somehow
     add_subdirectory(CEGUI)
-    set(IRR_EXT_CEGUI_INCLUDE_DIRS
-        ${IRR_EXT_CEGUI_INCLUDE_DIRS}
+    set(NBL_EXT_CEGUI_INCLUDE_DIRS
+        ${NBL_EXT_CEGUI_INCLUDE_DIRS}
         PARENT_SCOPE
     )
-    set(IRR_EXT_CEGUI_LIB
-        ${IRR_EXT_CEGUI_LIB}
+    set(NBL_EXT_CEGUI_LIB
+        ${NBL_EXT_CEGUI_LIB}
         PARENT_SCOPE
     )
     set(CMAKE_PREFIX_PATH ${_OLD_CMAKE_PREFIX_PATH})
 endif()
 
-if (IRR_BUILD_BULLET)
+if (NBL_BUILD_BULLET)
     add_subdirectory(Bullet)
-    set(IRR_EXT_BULLET_INCLUDE_DIRS
-        ${IRR_EXT_BULLET_INCLUDE_DIRS}
+    set(NBL_EXT_BULLET_INCLUDE_DIRS
+        ${NBL_EXT_BULLET_INCLUDE_DIRS}
         PARENT_SCOPE
     )
-    set(IRR_EXT_BULLET_LIB
-        ${IRR_EXT_BULLET_LIB}
+    set(NBL_EXT_BULLET_LIB
+        ${NBL_EXT_BULLET_LIB}
         PARENT_SCOPE
     )
 endif()
 
-if (IRR_BUILD_MITSUBA_LOADER)
+if (NBL_BUILD_MITSUBA_LOADER)
     add_subdirectory(MitsubaLoader)
-    set(IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS
-        ${IRR_EXT_MITSUBA_LOADER_INCLUDE_DIRS}
+    set(NBL_EXT_MITSUBA_LOADER_INCLUDE_DIRS
+        ${NBL_EXT_MITSUBA_LOADER_INCLUDE_DIRS}
         PARENT_SCOPE
     )
-    set(IRR_EXT_MITSUBA_LOADER_LIB
-        ${IRR_EXT_MITSUBA_LOADER_LIB}
+    set(NBL_EXT_MITSUBA_LOADER_LIB
+        ${NBL_EXT_MITSUBA_LOADER_LIB}
         PARENT_SCOPE
     )
 endif()
 
-if (IRR_BUILD_RADEON_RAYS)
+if (NBL_BUILD_RADEON_RAYS)
     add_subdirectory(RadeonRays)
-    set(IRR_EXT_RADEON_RAYS_INCLUDE_DIRS
-        ${IRR_EXT_RADEON_RAYS_INCLUDE_DIRS}
+    set(NBL_EXT_RADEON_RAYS_INCLUDE_DIRS
+        ${NBL_EXT_RADEON_RAYS_INCLUDE_DIRS}
         PARENT_SCOPE
     )
-    set(IRR_EXT_RADEON_RAYS_LIB
-        ${IRR_EXT_RADEON_RAYS_LIB}
+    set(NBL_EXT_RADEON_RAYS_LIB
+        ${NBL_EXT_RADEON_RAYS_LIB}
         PARENT_SCOPE
     )
 endif()
 
-if (IRR_BUILD_OPTIX)
+if (NBL_BUILD_OPTIX)
     add_subdirectory(OptiX)
-    set(IRR_EXT_OPTIX_INCLUDE_DIRS
-        ${IRR_EXT_OPTIX_INCLUDE_DIRS}
+    set(NBL_EXT_OPTIX_INCLUDE_DIRS
+        ${NBL_EXT_OPTIX_INCLUDE_DIRS}
         PARENT_SCOPE
     )
-    set(IRR_EXT_OPTIX_LIB
-        ${IRR_EXT_OPTIX_LIB}
+    set(NBL_EXT_OPTIX_LIB
+        ${NBL_EXT_OPTIX_LIB}
         PARENT_SCOPE
     )
 endif()
