--- a/.gitmodules
+++ b/.gitmodules
@@ -20,7 +20,7 @@
 [submodule "3rdparty/spirv_cross"]
 	path = 3rdparty/spirv_cross
 	url = https://github.com/devshgraphicsprogramming/SPIRV-Cross.git
-	branch = issues1350-2
+	branch = nabla
 [submodule "3rdparty/zlib"]
 	path = 3rdparty/zlib
 	url = https://github.com/madler/zlib.git
