Eliminate bugs, adjust the code to better layout, add cached shaders and begin setting up the pipeline

--- a/src/irr/builtin/CMakeLists.txt
+++ b/src/irr/builtin/CMakeLists.txt
@@ -26,6 +26,15 @@ set(irr_resources_to_embed
   "irr/builtin/shaders/loaders/mtl/fragment_impl.glsl"
   "irr/builtin/shaders/loaders/mtl/fragment_no_uv.frag"
   "irr/builtin/shaders/loaders/mtl/fragment_uv.frag"
+  "irr/builtin/shaders/loaders/gltf/common.glsl"
+  "irr/builtin/shaders/loaders/gltf/vertex_impl.glsl"
+  "irr/builtin/shaders/loaders/gltf/vertex_uv.vert"
+  "irr/builtin/shaders/loaders/gltf/vertex_color.vert"
+  "irr/builtin/shaders/loaders/gltf/vertex_no_uv_color.vert"
+  "irr/builtin/shaders/loaders/gltf/fragment_impl.glsl"
+  "irr/builtin/shaders/loaders/gltf/fragment_uv.frag"
+  "irr/builtin/shaders/loaders/gltf/fragment_color.frag"
+  "irr/builtin/shaders/loaders/gltf/fragment_no_uv_color.frag"
   "irr/builtin/specializedshaders/fullscreentriangle.vert"
   "irr/builtin/materials/lambertian/singletexture/specializedshader.vert"
   "irr/builtin/materials/lambertian/singletexture/specializedshader.frag"
