--- a/src/irr/ext/Bullet/CMakeLists.txt
+++ b/src/irr/ext/Bullet/CMakeLists.txt
@@ -7,17 +7,17 @@ file(GLOB_RECURSE BULLETCOLLISION_H ${BULLET_INCLUDE_PATH}/BulletCollision/*.h)
 file(GLOB_RECURSE BULLETDYNAMICS_H ${BULLET_INCLUDE_PATH}/BulletDynamics/*.h)
 file(GLOB_RECURSE LINEARMATH_H ${BULLET_INCLUDE_PATH}/LinearMath/*.h)
 
-set(IRR_EXT_INTERNAL_INCLUDE_DIR "${IRR_ROOT_PATH}/include/irr/ext/Bullet")
+set(NBL_EXT_INTERNAL_INCLUDE_DIR "${NBL_ROOT_PATH}/include/irr/ext/Bullet")
 
 set(NBL_EXT_BULLET_H
   ${BULLETCOLLISION_H}
   ${BULLETDYNAMICS_H}
   ${LINEARMATH_H}
-  ${IRR_EXT_INTERNAL_INCLUDE_DIR}/BulletUtility.h 
-  ${IRR_EXT_INTERNAL_INCLUDE_DIR}/CDebugRender.h 
-  ${IRR_EXT_INTERNAL_INCLUDE_DIR}/CInstancedMotionState.h
-  ${IRR_EXT_INTERNAL_INCLUDE_DIR}/CPhysicsWorld.h
-  ${IRR_EXT_INTERNAL_INCLUDE_DIR}/IMotionStateBase.h
+  ${NBL_EXT_INTERNAL_INCLUDE_DIR}/BulletUtility.h 
+  ${NBL_EXT_INTERNAL_INCLUDE_DIR}/CDebugRender.h 
+  ${NBL_EXT_INTERNAL_INCLUDE_DIR}/CInstancedMotionState.h
+  ${NBL_EXT_INTERNAL_INCLUDE_DIR}/CPhysicsWorld.h
+  ${NBL_EXT_INTERNAL_INCLUDE_DIR}/IMotionStateBase.h
 )
 
 set(NBL_EXT_BULLET_SRC
