--- a/src/irr/ext/OptiX/CMakeLists.txt
+++ b/src/irr/ext/OptiX/CMakeLists.txt
@@ -1,29 +1,29 @@
-include(${IRR_ROOT_PATH}/cmake/common.cmake)
-set(IRR_EXT_INTERNAL_INCLUDE_DIR "${IRR_ROOT_PATH}/include/irr/ext/OptiX")
+include(${NBL_ROOT_PATH}/cmake/common.cmake)
+set(NBL_EXT_INTERNAL_INCLUDE_DIR "${NBL_ROOT_PATH}/include/irr/ext/OptiX")
 
-set(IRR_EXT_OPTIX_H
-	${IRR_EXT_INTERNAL_INCLUDE_DIR}/SbtRecord.h
-	${IRR_EXT_INTERNAL_INCLUDE_DIR}/IModule.h
-	${IRR_EXT_INTERNAL_INCLUDE_DIR}/IContext.h
-	${IRR_EXT_INTERNAL_INCLUDE_DIR}/IDenoiser.h
-	${IRR_EXT_INTERNAL_INCLUDE_DIR}/Manager.h
+set(NBL_EXT_OPTIX_H
+	${NBL_EXT_INTERNAL_INCLUDE_DIR}/SbtRecord.h
+	${NBL_EXT_INTERNAL_INCLUDE_DIR}/IModule.h
+	${NBL_EXT_INTERNAL_INCLUDE_DIR}/IContext.h
+	${NBL_EXT_INTERNAL_INCLUDE_DIR}/IDenoiser.h
+	${NBL_EXT_INTERNAL_INCLUDE_DIR}/Manager.h
 )
 
-set(IRR_EXT_OPTIX_SRC
+set(NBL_EXT_OPTIX_SRC
 	Manager.cpp
 	IContext.cpp
 )
 
-set(IRR_EXT_OPTIX_EXTERNAL_INCLUDE
-	"${IRR_ROOT_PATH}/3rdparty"
+set(NBL_EXT_OPTIX_EXTERNAL_INCLUDE
+	"${NBL_ROOT_PATH}/3rdparty"
 	"${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}"
 	"${OPTIX_INCLUDE_DIR}"
 )
 
 irr_create_ext_library_project(
 	OPTIX
-	"${IRR_EXT_OPTIX_H}"
-	"${IRR_EXT_OPTIX_SRC}"
-	"${IRR_EXT_OPTIX_EXTERNAL_INCLUDE}"
+	"${NBL_EXT_OPTIX_H}"
+	"${NBL_EXT_OPTIX_SRC}"
+	"${NBL_EXT_OPTIX_EXTERNAL_INCLUDE}"
 	""
 )
