Begin creating interface of key cache creator, but I don't think it is a good idea - please give me more details

--- a/src/irr/CMakeLists.txt
+++ b/src/irr/CMakeLists.txt
@@ -202,6 +202,10 @@ set(IRR_ASSET_SOURCES
 # Material compiler
 	${IRR_ROOT_PATH}/src/irr/asset/material_compiler/CMaterialCompilerGLSLBackendCommon.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/material_compiler/CMaterialCompilerGLSLRasterBackend.cpp
+	
+# Cache unique key creators
+	${IRR_ROOT_PATH}/src/irr/asset/builtin/cache/ICacheKeyCreator.cpp
+	${IRR_ROOT_PATH}/src/irr/asset/builtin/cache/CPipelineCacheKeyCreator.cpp
 )
 set(IRR_VIDEO_SOURCES
 # Allocators
