Upgraded to latest SPIR-V Cross and removed AMD broken GPU driver `row_major` workaround (since now that's included in SPIR-V Cross codebase, "lol AMD sux")

--- a/src/irr/CMakeLists.txt
+++ b/src/irr/CMakeLists.txt
@@ -136,8 +136,7 @@ set(IRR_ASSET_SOURCES
 	${IRR_ROOT_PATH}/src/irr/asset/IAssetWriter.cpp
 	${IRR_ROOT_PATH}/src/irr/asset/IAssetLoader.cpp
 	
-# Builtin include loaders
-	${IRR_ROOT_PATH}/src/irr/asset/CGLSLScanBuiltinIncludeLoader.cpp
+# Builtin include loaders (TO REMOVE)
 	${IRR_ROOT_PATH}/src/irr/asset/CGLSLSkinningBuiltinIncludeLoader.cpp
 	
 # Shaders
