Update 3rdparty Cmake

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -34,6 +34,7 @@ update_git_submodule(./openssl)
 update_git_submodule(./libjpeg-turbo)
 update_git_submodule(./libjpeg) # soon to be killed
 update_git_submodule(./parallel-hashmap)
+update_git_submodule(./gli)
 # exceptions that get automatically cloned
 update_git_submodule(./glm)
 update_git_submodule(./freetype2)
@@ -454,6 +455,9 @@ if (IRR_COMPILE_WITH_CUDA)
 endif()
 
 set(IRR_3RDPARTY_TARGETS
+				RadeonRays
+				CLW
+				Calc
 				lzma
 				lz4
 				aesGladman
